タグ一覧の色修正，memolistのソート機能，表示形式変更機能実装

--- a/front-end/front-app/src/styles/leftside.module.css
+++ b/front-end/front-app/src/styles/leftside.module.css
@@ -46,6 +46,7 @@
     text-decoration: underline;
 }
 .tag-button {
+    color: #808080;
     border: none;
     background-color: transparent;
     cursor: pointer;
