--- a/front-end/front-app/src/styles/index.module.css
+++ b/front-end/front-app/src/styles/index.module.css
@@ -1,8 +1,10 @@
 .header {
+    position: fixed;
+    top: 0;
     height: 45px; /* ヘッダーの高さを設定（必要に応じて調整） */
 }
 .title {
-    margin-left: 50px;
+    margin-left: 10px;
 }
 
 .left-column {
@@ -21,6 +23,8 @@
 }
 
 .footer {
+    position: fixed;
+    bottom: 0;
     text-align: center;
     height: 25px; /* フッターの高さを設定（必要に応じて調整） */
 }
